<resources>
    <string name="app_name">Notaza</string>
    <string name="hint_entry">Entry…</string>
    <string name="hint_description">Description…</string>
    <string name="button_continue">Continue</string>
    <string name="empty_entry_name">Entry not saved because it is empty.</string>
    <string name="action_search">Search</string>
    <string name="action_more">Menu</string>
    <string name="search_hint">Type to search…</string>
    <string name="new_entry_title">New entry</string>
    <string name="today">TODAY</string>
    <string name="entrynotavailable">Entry not available</string>
    <string name="hint_category">Category…</string>
    <string name="errorselectingcategory">Error selecting category</string>
    <string name="new_category_title">New Category</string>
    <string name="novice">Novice</string>
    <string name="beginner">Beginner</string>
    <string name="competent">Competent</string>
    <string name="proficient">Proficient</string>
    <string name="expert">Expert</string>
    <string name="empty_string"> </string>
    <string name="selectExperiencePlease">Select level of expertise</string>
    <string name="category_s_image">Category\'s image</string>
    <string name="UnsplashStringName">Unsplash</string>
    <string name="edit_information">Edit information</string>
    <string name="delete_category">Delete Category</string>
    <string name="category_menu">Category Menu</string>
    <string name="todo">To-do</string>
    <string name="places">Places</string>
    <string name="skills">Skills</string>
    <string name="notes">Notes</string>
    <string name="categoryTypeSelectionNeeded">Select a type of list for this category</string>
    <string name="edit">Edit</string>
    <string name="category">category</string>
    <string name="empty_category_name">Category not saved because name is empty</string>
    <string name="save">Save</string>
    <string name="continue1">Continue</string>
    <string name="noThanks">No, thanks</string>
    <string name="remindMeLater">Remind me later</string>
    <string name="Rate">Rate\u0020</string>
    <string name="enjoyUsing">If you enjoy using\u0020</string>
    <string name="pleaseRate">, please take a moment to rate it. Thanks for your support!</string>
    <string name="photo_by">Photo by\u0020</string>
    <string name="unsplash_picture">unsplash picture</string>
    <string name="on">\u0020on\u0020</string>
    <string name="removedFromList">\u0020removed from the list!</string>
    <string name="undo">UNDO</string>
    <string name="selectThisPictureQuestion">Select this picture?</string>
    <string name="YES">YES</string>
    <string name="select_a_picture">Select a background picture</string>
    <string name="not_happy_search_for_more">Not happy?…Search for more</string>
    <string name="search">Search</string>
    <string name="keep_seaarching">Keep searching?</string>
    <string name="insert_a_keyword">Insert a keyword…</string>
    <string name="try_again">Try Again</string>
    <string name="change_background_image">Change background image</string>
    <string name="do_you_want_to_search_for_new_image">Search for new image?</string>
    <string name="picture_selection_problem">There was a problem selecting the picture</string>
    <string-array name="more_items_drawer_activity">
        <item>Edit Category</item>
        <item>Delete Category</item>
    </string-array>
</resources>
