<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.category.CategoryActivity">

    <item
        android:id="@+id/actionsearch_main"
        android:icon="@drawable/ic_search_black_24dp"
        android:orderInCategory="11"
        android:title="@string/action_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always" />
    <item
        android:id="@+id/category_menu"
        android:icon="@drawable/ic_more_vert_black_24dp"
        android:title="@string/category_menu"
        android:orderInCategory="12"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/edit_category_menu_item"
                android:title="@string/edit_information" />
            <item
                android:id="@+id/change_picture_menu_item"
                android:title="@string/change_background_image" />
        </menu>
    </item>

</menu>