<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:theme="@style/AppTheme.AppBarOverlay"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <androidx.appcompat.widget.Toolbar android:layout_width="match_parent"
            android:id="@+id/add_new_category_toolbar"
            android:layout_height="?attr/actionBarSize"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:background="@android:color/white"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            xmlns:android="http://schemas.android.com/apk/res/android" />

    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp"/>

    <info.hoang8f.android.segmented.SegmentedGroup
        xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
        android:id="@+id/categoryTypeSegmentedGroup"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        segmentedgroup:sc_border_width="2dp"
        segmentedgroup:sc_corner_radius="5dp"
        segmentedgroup:sc_checked_text_color="@color/buttonLabel"
        segmentedgroup:sc_tint_color="@color/colorPrimary">

        <RadioButton
            android:id="@+id/notesBtnSegGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notes"
            style="@style/RadioButton" />

        <RadioButton
            android:id="@+id/skillsBtnSegGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skills"
            style="@style/RadioButton" />

        <!-- TODO Places todo -->
<!--        <RadioButton-->
<!--            android:id="@+id/placesBtnSegGroup"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/places"-->
<!--            style="@style/RadioButton" />-->

<!--        <RadioButton-->
<!--            android:id="@+id/toDoBtnSegGroup"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/todo"-->
<!--            style="@style/RadioButton" />-->
    </info.hoang8f.android.segmented.SegmentedGroup>

    <EditText
        android:id="@+id/edit_category_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_category"
        android:inputType="textAutoComplete"
        android:padding="@dimen/small_padding"
        android:layout_marginBottom="@dimen/big_padding"
        android:layout_marginTop="@dimen/big_padding"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edit_category_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_description"
        android:inputType="textAutoComplete"
        android:padding="@dimen/small_padding"
        android:layout_marginTop="@dimen/big_padding"
        android:textSize="18sp" />


    <Button
        android:id="@+id/continue_button_new_category"
        style="@style/ButtonStyle"
        android:layout_marginTop="@dimen/marginBtn"
        android:text="@string/continue1"
        android:layout_gravity="center"
        android:visibility="visible" />

    <Button
        android:visibility="gone"
        android:id="@+id/savebutton_newcategory"
        android:layout_marginTop="@dimen/marginBtn"
        android:text="@string/save"
        style="@style/ButtonStyle"
        android:layout_gravity="center" />

</LinearLayout>

