<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:orientation="vertical"
    android:id="@+id/linear_layout_recycler_view"
    tools:context=".presentation.category.NewCategoryActivity"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_gravity="start"
        android:layout_weight="0"
        android:background="@drawable/layout_box"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:orientation="horizontal"
        android:layout_height="120dp">
        <ImageView
            android:layout_gravity="center"
            android:id="@+id/current_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        >
        <TextView
            android:id="@+id/backgroundPictureTextViewFrame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="0"
            android:textStyle="normal"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:text="@string/change_background_image" />
    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@color/colorAccent"
        android:elevation="4dp"/>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_weight="3" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_weight="0"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/layout_box"
        android:elevation="@dimen/big_padding">
        <LinearLayout
            android:padding="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/searchForPictureLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/do_you_want_to_search_for_new_image"
                android:textSize="@dimen/SmallTextSize" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tryAgainEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/insert_a_keyword"
                android:textSize="@dimen/SmallTextSize" />
        </LinearLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/searchBtnChangePicture"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_toEndOf="@+id/searchForPictureLayout"
            android:text="@string/search"
            style="@style/ButtonStyle">

        </android.support.v7.widget.AppCompatButton>
    </android.support.constraint.ConstraintLayout>
</LinearLayout>
